...
            android:orientation="vertical"
            android:layout_marginStart="@dimen/margin_small"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/pages_link_buttons_content">

            <br.com.fenix.bilingualreader.view.components.MaterialButtonExpanded
                android:id="@+id/pages_link_auto_process_button"
                style="@style/Button.PageLinkFunction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/page_link_reorder_auto"
                android:text="@string/page_link_reorder_auto"
                app:icon="@drawable/ico_animated_file_link_auto_process"/>

            <br.com.fenix.bilingualreader.view.components.MaterialButtonExpanded
                android:id="@+id/pages_link_dual_page_button"
                style="@style/Button.PageLinkFunction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/page_link_reorder_dual_page"
                android:text="@string/page_link_reorder_dual_page"
                app:icon="@drawable/ico_animated_file_link_dual_page"/>

            <br.com.fenix.bilingualreader.view.components.MaterialButtonExpanded
                android:id="@+id/pages_link_single_page_button"
                style="@style/Button.PageLinkFunction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/page_link_reorder_single_page"
                android:text="@string/page_link_reorder_single_page"
                app:icon="@drawable/ico_animated_file_link_single_page"/>

            <br.com.fenix.bilingualreader.view.components.MaterialButtonExpanded
                android:id="@+id/pages_link_reorder_button"
                style="@style/Button.PageLinkFunction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/page_link_reorder_sorted_page"
                android:text="@string/page_link_reorder_sorted_page"
                app:icon="@drawable/ico_animated_file_link_reorder" />

            <br.com.fenix.bilingualreader.view.components.MaterialButtonExpanded
                android:id="@+id/file_link_delete_button"
                style="@style/Button.PageLinkFunction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/page_link_delete_file_link"
                android:text="@string/page_link_delete_file_link"
                app:icon="@drawable/ico_animated_file_link_deleted"/>
...
                android:contentDescription="@string/page_link_reorder_undo_changes"
                android:text="@string/page_link_reorder_undo_changes"
                android:enabled="false"
                app:icon="@drawable/ico_animated_file_link_undo_changes"/>

            <br.com.fenix.bilingualreader.view.components.MaterialButtonExpanded
                android:id="@+id/pages_link_reload_button"
                style="@style/Button.PageLinkFunction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/page_link_reload_file_link"
                android:text="@string/page_link_reload_file_link"
                app:icon="@drawable/ico_animated_file_link_reload" />
...
            android:layout_marginEnd="@dimen/margin_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:gravity="end">

            <br.com.fenix.bilingualreader.view.components.MaterialButtonExpanded
                android:id="@+id/pages_link_help_button"
                style="@style/Button.RoundedIconOnly"
                android:layout_width="@dimen/page_link_help_size"
                android:layout_height="@dimen/page_link_help_size"
                android:contentDescription="@string/page_link_help"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="13dp"
                android:tag="used"
                app:iconTint="@null"
                app:icon="@drawable/ico_animated_file_link_help"/>

            <Button
                android:id="@+id/pages_link_save_button"
                style="@style/Button"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/page_link_save"
                android:layout_margin="@dimen/page_link_button_margin"
...
                android:paddingEnd="@dimen/page_link_fullscreen_padding"
                android:layout_margin="1dp"
                android:layout_gravity="bottom"
                android:gravity="center">

                <com.google.android.material.progressindicator.CircularProgressIndicator
                    android:id="@+id/pages_link_loading_progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:indeterminate="false"
                    android:max="100"
...
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/pages_link_full_screen_button"
                    style="@style/Button.RoundedIconOnly"
                    android:layout_height="@dimen/page_link_fullscreen_size"
                    android:layout_width="@dimen/page_link_fullscreen_size"
                    android:contentDescription="@string/page_link_full_screen"
                    app:icon="@drawable/ico_animated_full_screen_enter"
                    app:layout_constraintStart_toStartOf="parent"
...
