...
    android:paddingTop="@dimen/margin_small"
    android:paddingRight="@dimen/margin_small"
    android:paddingBottom="@dimen/margin_bottom"
    tools:context=".view.ui.reader.book.PopupBookLayout">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/popup_book_layout_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/popup_book_layout_scrolling_mode"
            style="@style/TextInputDropMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/popup_reading_layout_scrolling_mode"
            android:layout_margin="@dimen/margin_small"
            app:startIconDrawable="@drawable/ico_reading_mode"
...
            android:layout_marginBottom="@dimen/margin_small"
            android:text="@string/popup_reading_layout_alignment"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/popup_book_layout_alignment_divider" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/popup_book_layout_alignment_justify"
            style="@style/Button.SquaredIconOnly"
            android:layout_width="@dimen/popup_reader_button_width"
            android:layout_height="@dimen/popup_reader_button_width"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="1dp"
            android:minHeight="@dimen/popup_reader_button_min_height"
            android:tooltipText="@string/popup_reading_layout_alignment_complete"
            app:icon="@drawable/ico_animated_align_justify"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/popup_book_layout_alignment_left"
            app:layout_constraintTop_toBottomOf="@+id/popup_book_layout_alignment_description"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/popup_book_layout_alignment_left"
            style="@style/Button.SquaredIconOnly"
            android:layout_width="@dimen/popup_reader_button_width"
...
            android:layout_marginBottom="1dp"
            android:minHeight="@dimen/popup_reader_button_min_height"
            android:tooltipText="@string/popup_reading_layout_alignment_left"
            app:icon="@drawable/ico_animated_align_left"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintLeft_toRightOf="@+id/popup_book_layout_alignment_justify"
            app:layout_constraintRight_toLeftOf="@+id/popup_book_layout_alignment_center"
            app:layout_constraintTop_toBottomOf="@+id/popup_book_layout_alignment_description"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/popup_book_layout_alignment_center"
            style="@style/Button.SquaredIconOnly"
            android:layout_width="@dimen/popup_reader_button_width"
...
            android:layout_marginBottom="1dp"
            android:minHeight="@dimen/popup_reader_button_min_height"
            android:tooltipText="@string/popup_reading_layout_alignment_left"
            app:icon="@drawable/ico_animated_align_center"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintLeft_toRightOf="@+id/popup_book_layout_alignment_left"
            app:layout_constraintRight_toLeftOf="@+id/popup_book_layout_alignment_right"
            app:layout_constraintTop_toBottomOf="@+id/popup_book_layout_alignment_description"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/popup_book_layout_alignment_right"
            style="@style/Button.SquaredIconOnly"
            android:layout_width="@dimen/popup_reader_button_width"
...
